Bug 211092. Don't force pixel->twip ratio to be an integer for print devices. r+sr=dbaron,a=asa